--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ DATABASE_URL="mysql://olw9185en:Logan24092018@@127.0.0.1:3306/app?serverVersion=
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/loco-translation-provider ###
+LOCO_DSN=loco://pStosa_x6z0Qt_ltgBDQMppONAdCscH-7@default
+###< symfony/loco-translation-provider ###
