--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://olw9185en:Logan24092018@@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -44,5 +44,5 @@ DATABASE_URL="mysql://olw9185en:Logan24092018@@127.0.0.1:3306/app?serverVersion=
 ###< symfony/mailer ###
 
 ###> symfony/loco-translation-provider ###
-LOCO_DSN=loco://pStosa_x6z0Qt_ltgBDQMppONAdCscH-7@default
+LOCO_DSN=loco://KEY@default
 ###< symfony/loco-translation-provider ###
